k8s-specifications/base/visign-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visign-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - PLACEHOLDER_HOST
      secretName: visign-tls-PLACEHOLDER_ENV
  rules:
    - host: PLACEHOLDER_HOST
      http:
        paths:
          - path: /api/predict
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /api/videos
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
